--- a/shoppingcart/package.json
+++ b/shoppingcart/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.33",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -20,8 +21,12 @@
     "react": "^17.0.2",
     "react-data-grid": "^7.0.0-canary.49",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -54,6 +59,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-logger": "^3.0.9",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
